tests/snapshots/project__screen_capture_project_load.snap
---
source: tests/project.rs
expression: project
---
project_type: Exe
references:
  - uuid: 00020430-0000-0000-c000-000000000046
    unknown1:
      - 50
      - 46
      - 48
    unknown2:
      - 48
    path:
      - 46
      - 46
      - 92
      - 46
      - 46
      - 92
      - 46
      - 46
      - 92
      - 87
      - 105
      - 110
      - 100
      - 111
      - 119
      - 115
      - 92
      - 83
      - 121
      - 115
      - 87
      - 79
      - 87
      - 54
      - 52
      - 92
      - 115
      - 116
      - 100
      - 111
      - 108
      - 101
      - 50
      - 46
      - 116
      - 108
      - 98
    description:
      - 79
      - 76
      - 69
      - 32
      - 65
      - 117
      - 116
      - 111
      - 109
      - 97
      - 116
      - 105
      - 111
      - 110
  - uuid: e1211242-8e94-11d1-8808-00c04fc2c602
    unknown1:
      - 49
      - 46
      - 48
    unknown2:
      - 48
    path:
      - 46
      - 46
      - 92
      - 46
      - 46
      - 92
      - 87
      - 73
      - 78
      - 68
      - 79
      - 87
      - 83
      - 92
      - 115
      - 121
      - 115
      - 116
      - 101
      - 109
      - 51
      - 50
      - 92
      - 100
      - 120
      - 55
      - 118
      - 98
      - 46
      - 100
      - 108
      - 108
    description:
      - 68
      - 105
      - 114
      - 101
      - 99
      - 116
      - 88
      - 32
      - 55
      - 32
      - 102
      - 111
      - 114
      - 32
      - 86
      - 105
      - 115
      - 117
      - 97
      - 108
      - 32
      - 66
      - 97
      - 115
      - 105
      - 99
      - 32
      - 84
      - 121
      - 112
      - 101
      - 32
      - 76
      - 105
      - 98
      - 114
      - 97
      - 114
      - 121
objects: []
modules: []
classes: []
related_documents: []
designers: []
forms:
  - - 70
    - 111
    - 114
    - 109
    - 83
    - 99
    - 114
    - 101
    - 101
    - 110
    - 67
    - 97
    - 112
    - 116
    - 117
    - 114
    - 101
    - 46
    - 102
    - 114
    - 109
user_controls: []
user_documents: []
other_properties:
  ? - 77
    - 83
    - 32
    - 84
    - 114
    - 97
    - 110
    - 115
    - 97
    - 99
    - 116
    - 105
    - 111
    - 110
    - 32
    - 83
    - 101
    - 114
    - 118
    - 101
    - 114
  : ? - 65
      - 117
      - 116
      - 111
      - 82
      - 101
      - 102
      - 114
      - 101
      - 115
      - 104
    : - 49
unused_control_info: Remove
upgrade_controls: Upgrade
res_file_32_path: []
icon_form:
  - 70
  - 111
  - 114
  - 109
  - 83
  - 99
  - 114
  - 101
  - 101
  - 110
  - 67
  - 97
  - 112
  - 116
  - 117
  - 114
  - 101
startup:
  - 70
  - 111
  - 114
  - 109
  - 83
  - 99
  - 114
  - 101
  - 101
  - 110
  - 67
  - 97
  - 112
  - 116
  - 117
  - 114
  - 101
help_file_path: []
title:
  - 83
  - 99
  - 114
  - 101
  - 101
  - 110
  - 32
  - 67
  - 97
  - 112
  - 116
  - 117
  - 114
  - 101
  - 32
  - 68
  - 101
  - 109
  - 111
  - 110
  - 115
  - 116
  - 114
  - 97
  - 116
  - 105
  - 111
  - 110
exe_32_file_name:
  - 83
  - 99
  - 114
  - 101
  - 101
  - 110
  - 67
  - 97
  - 112
  - 116
  - 117
  - 114
  - 101
  - 46
  - 101
  - 120
  - 101
exe_32_compatible: []
dll_base_address: 285212672
path_32: []
command_line_arguments: ~
name:
  - 80
  - 114
  - 111
  - 106
  - 101
  - 99
  - 116
  - 95
  - 83
  - 99
  - 114
  - 101
  - 101
  - 110
  - 67
  - 97
  - 112
  - 116
  - 117
  - 114
  - 101
description: []
debug_startup_component: []
help_context_id:
  - 48
compatibility_mode: NoCompatibility
version_32_compatibility: []
version_info:
  major: 1
  minor: 0
  revision: 12
  auto_increment_revision: 1
  company_name:
    - 119
    - 119
    - 119
    - 46
    - 116
    - 97
    - 110
    - 110
    - 101
    - 114
    - 104
    - 101
    - 108
    - 108
    - 97
    - 110
    - 100
    - 46
    - 99
    - 111
    - 109
  file_description: []
  copyright: []
  trademark: []
  product_name: []
  comments:
    - 68
    - 111
    - 119
    - 110
    - 108
    - 111
    - 97
    - 100
    - 101
    - 100
    - 32
    - 102
    - 114
    - 111
    - 109
    - 32
    - 119
    - 119
    - 119
    - 46
    - 116
    - 97
    - 110
    - 110
    - 101
    - 114
    - 104
    - 101
    - 108
    - 108
    - 97
    - 110
    - 100
    - 46
    - 99
    - 111
    - 109
server_support_files: Local
conditional_compile: []
compilation_type: NativeCode
optimization_type: FavorFastCode
favor_pentium_pro: "True"
code_view_debug_info: NotCreated
aliasing: AssumeNoAliasing
bounds_check: NoBoundsCheck
overflow_check: NoOverflowCheck
floating_point_check: NoFloatingPointErrorCheck
pentium_fdiv_bug_check: NoPentiumFDivBugCheck
unrounded_floating_point: true
start_mode: false
unattended: false
retained: false
thread_per_object: 0
threading_model: ApartmentThreaded
max_number_of_threads: 1
debug_startup_option: WaitForComponentCreation
use_existing_browser: true
property_page: []
